[package]
name = "codespan-derive-proc"
version = "0.1.1"
authors = ["Michael Goulet <michael@errs.io>"]
edition = "2018"
license = "MIT"
description = "derive(IntoDiagnostic) implementation"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.28"
quote = "1.0.9"
syn = "1.0.75"
synstructure = "0.12.5"
